concluded docker, started node

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,11 +13,11 @@
 }
 
 @book{chachon,
-	author    	=	"Scott Chacon, Ben Straub"
-    title	  	= 	"Pro Git"
-    edition		=	"Second Edition"
-    publisher	=	"Apress"
-    year		=	"2014"
+	author    	=	"Scott Chacon, Ben Straub",
+    title	  	= 	"Pro Git",
+    edition		=	"Second Edition",
+    publisher	=	"Apress",
+    year		=	"2014",
     url 	  	= 	"https://git-scm.com/book/en/v2"
 }
 
@@ -26,6 +26,20 @@
 	title     	= 	"A successful Git branching model",
     year		=	"2010",
     month		=	"January",
-    note		=	"Blog post",
+    note		=	"Blog post, date accessed Jan/2018",
 	url       	= 	"http://nvie.com/posts/a-successful-git-branching-model/"
+}
+
+@misc{nodejs,
+	author		=	"NodeJS",
+    title		=	"Documentation",
+    note		=	"Dates accessed, Oct-2017 to Apr-2018",
+    url			=	"https://nodejs.org/en/about/"
+}
+
+@misc{googleV8,
+	author		=	"Google",
+    title		=	"Chrome V8 Engine Documentation",
+    note		=	"Date accessed, 08-Apr-2018",
+    url 		= 	"https://github.com/v8/v8/wiki"   
 }
